Fixing dark mode styles

--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -222,7 +222,7 @@ hr {
 
 .card:hover {
   transform: translateY(0.5rem);
-  background-color: var(--secondary-red);
+  background-color: var(--secondary-red) !important;
 }
 
 .card:hover img {
